# barinova_pedestrians_detection

./: MSR-SSLA.txt  README.md  README.txt
ObjectDetection/: main_run_greedy_pedestrians.cpp
ObjectDetection/DenseGreedyDetection/: GreedyDetection.cpp  GreedyDetection.h
ObjectDetection/Forests/: BoxTest.h  HoughForest.cpp  HoughForest.h  HoughSample.h  HoughTree.cpp  HoughTree.h  IHoughForest.cpp  IHoughForest.h  IHoughTree.h  IVote.h  RandomTree.h  Vote.cpp  Vote.h
ObjectDetection/ImageWrapper/: CRPatch.cpp  CRPatch.h  HoG.cpp  HoG.h  ImageUtils.h  MultiImage.h  MultiImageTools.cpp  MultiImageTools.h
ObjectDetection/ObjectDetection/: CMakeLists.txt  ObjectDetection.sln  ObjectDetection.vcproj
ObjectDetection/Utils/: math_functions.h
example/: campus-config.txt  crossing-config.txt
